openshift/service.yaml
# Exposes the application on port 8080
apiVersion: v1
kind: Service
metadata:
  name: viavi-meter-provisioning
  labels:
    app: viavi-meter-provisioning
spec:
  selector:
    app: viavi-meter-provisioning
  ports:
    - name: http
      port: 8080
      targetPort: 8080
