openshift/network-policy.yaml
# Allow ingress traffic from the OpenShift router
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-openshift-router
spec:
  podSelector:
    matchLabels:
      app: viavi-meter-provisioning
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
